<resources>
    <string name="app_name">Etiquette</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="Ridicus">Ridiculous</string>
    <string name="Heat">Heart Warming</string>
    <string name="look_around">Have a look around.</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="term_and_condition"><u>Term&amp;Conditions</u></string>
    <string name="already_have_account"><u>Already have an account? <b>SIGN IN</b></u></string>
    <string name="dont_have_account"><u>Don\'t have account? <b>SIGN UP</b></u></string>
    <string name="sign_in_with">Sign in with:</string>
    <string name="phone_email">Phone Number/Email</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="password">Password</string>
    <string name="option_three_text">It\'s only OK if there are no one sitting in front. (Empty seat)</string>
    <string name="option_four_text">This is not right. My feet are probably smelling after traveling. Let me be courteous to others by keeping my feet in my own space.</string>
    <string name="addlocation">ADD LOCATION</string>
    <string name="locations">LOCATIONS</string>
    <string name="latest_text">LATEST</string>
    <string name="popular_text">POPULAR</string>
    <string name="travel">TRAVEL</string>
    <string name="select_any_option">SELECT ANY OPTION</string>
    <string name="categories_text">CATEGORIES</string>
    <string name="username_text">Username</string>
    <string name="preferred_location_text">Preferred Location</string>
    <string name="first_name_text">First Name</string>
    <string name="john_smith">John Smith</string>
    <string name="catagories">CATEGORIES</string>
    <string name="Search">SEARCH</string>
    <string name="action_done">action</string>
    <string name="search_location">Search Location</string>
    <string name="edit_text">EDIT TEXT</string>
    <string name="phone_number">Phone Number</string>
    <string name="option_one_text">There\'s an small opening in front of the seat where I can put my foot. Why don\'t I stretch my foot ther?</string>
    <string name="markham">Markham City</string>
    <string name="option_two_text">This may seem rude. Let me see if the person is asleep in front. If he or she is asleep then it\'s ok.</string>
    <string name="CHOSE_OPTION">YOU CHOSE OPTION &quot;C&quot;</string>
    <string name="hong_kong">Search Location</string>
    <string name="Causeway_Bay">Causeway Bay</string>
    <string name="people_chose">WHAT PEOPLE CHOSE</string>
    <string name="chung">Chung Hom Kok</string>
    <string name="sandy">Sanday Bay</string>
    <string name="Gardener">Kornhill Gardener</string>
    <string name="fotress_hill">Fortress Hill</string>
    <string name="sarah_josh">SARAH JESON</string>
    <string name="user_name">Username</string>
    <string name="last_name_text">Last Name</string>
    <string name="email_text">Email</string>
    <string name="mobile_number_text">Mobile Number</string>
    <string name="profile_text">PROFILE</string>
    <string name="loading_text">Loading</string>
    <string name="logging_in_text">Logging In</string>
    <string name="check_internet">Check internet connection and try again</string>
    <string name="incorrect_email_password">Incorrect email/password</string>
    <string name="fill_details">Please fill all details</string>
    <string name="signing_up_text">Signing Up</string>
    <string name="account_exist">Account already exist</string>
    <string name="unable_login">Unable to sign in</string>
    <string name="travel_text">TRAVEL</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="contact_info">Contact Information</string>
    <string name="select_option">SELECT ANY OPTION</string>
    <string name="choose_correct_option"><u>YOU HAVE CHOOSEN CORRECT OPTION</u></string>
    <string name="choose_wrong_option"><u>LOOK WHAT IS APPROPRITE SUGGESTION</u></string>
    <string name="option_1">OPTION 1</string>
    <string name="option_2">OPTION 2</string>
    <string name="option_3">OPTION 3</string>
    <string name="option_4">OPTION 4</string>
    <string name="sign_out_text">SIGN OUT</string>
    <string name="home">HOME</string>
    <string name="add_caption">Add Caption</string>
    <string name="add_location">Add Location(Optional)</string>
    <string name="add_choice">Add Choice(Optional)</string>
    <string name="discover">DISCOVER</string>
    <string name="add_scenario_text">ADD SCENARIO</string>
    <string name="upload_attachment">Upload Attachment Photo or Video</string>
    <string name="settings">SETTINGS</string>
    <string name="select_catagory">Select your category</string>
    <string name="add_title">Add Title</string>
    <string name="tap_to_enter_name">Tap to Enter your Name</string>
    <string name="camera_text">Camera</string>
    <string name="gallery_text">Gallery</string>
    <string name="take_photo">Take Photo From</string>
    <string-array name="country_codes">
        <item>+93</item>
        <item>+355</item>
        <item>+213</item>
        <item>+376</item>
        <item>+244</item>
        <item>+672</item>
        <item>+54</item>
        <item>+374</item>
        <item>+297</item>
        <item>+61</item>
        <item>+43</item>
        <item>+994</item>
        <item>+973</item>
        <item>+880</item>
        <item>+375</item>
        <item>+32</item>
        <item>+501</item>
        <item>+229</item>
        <item>+975</item>
        <item>+591</item>
        <item>+387</item>
        <item>+267</item>
        <item>+55</item>
        <item>+673</item>
        <item>+359</item>
        <item>+226</item>
        <item>+95</item>
        <item>+257</item>
        <item>+855</item>
        <item>+237</item>
        <item>+1</item>
        <item>+238</item>
        <item>+236</item>
        <item>+235</item>
        <item>+56</item>
        <item>+86</item>
        <item>+61</item>
        <item>+61</item>
        <item>+57</item>
        <item>+269</item>
        <item>+242</item>
        <item>+243</item>
        <item>+682</item>
        <item>+506</item>
        <item>+385</item>
        <item>+53</item>
        <item>+357</item>
        <item>+420</item>
        <item>+45</item>
        <item>+253</item>
        <item>+670</item>
        <item>+593</item>
        <item>+20</item>
        <item>+503</item>
        <item>+240</item>
        <item>+291</item>
        <item>+372</item>
        <item>+251</item>
        <item>+500</item>
        <item>+298</item>
        <item>+679</item>
        <item>+358</item>
        <item>+33</item>
        <item>+689</item>
        <item>+241</item>
        <item>+220</item>
        <item>+995</item>
        <item>+49</item>
        <item>+233</item>
        <item>+350</item>
        <item>+30</item>
        <item>+299</item>
        <item>+502</item>
        <item>+224</item>
        <item>+245</item>
        <item>+592</item>
        <item>+509</item>
        <item>+504</item>
        <item>+852</item>
        <item>+36</item>
        <item>+91</item>
        <item>+62</item>
        <item>+98</item>
        <item>+964</item>
        <item>+353</item>
        <item>+44</item>
        <item>+972</item>
        <item>+39</item>
        <item>+225</item>
        <item>+81</item>
        <item>+962</item>
        <item>+7</item>
        <item>+254</item>
        <item>+686</item>
        <item>+965</item>
        <item>+996</item>
        <item>+856</item>
        <item>+371</item>
        <item>+961</item>
        <item>+266</item>
        <item>+231</item>
        <item>+218</item>
        <item>+423</item>
        <item>+370</item>
        <item>+352</item>
        <item>+853</item>
        <item>+389</item>
        <item>+261</item>
        <item>+265</item>
        <item>+60</item>
        <item>+960</item>
        <item>+223</item>
        <item>+356</item>
        <item>+692</item>
        <item>+222</item>
        <item>+230</item>
        <item>+262</item>
        <item>+52</item>
        <item>+691</item>
        <item>+373</item>
        <item>+377</item>
        <item>+976</item>
        <item>+382</item>
        <item>+212</item>
        <item>+258</item>
        <item>+264</item>
        <item>+674</item>
        <item>+977</item>
        <item>+31</item>
        <item>+599</item>
        <item>+687</item>
        <item>+64</item>
        <item>+505</item>
        <item>+227</item>
        <item>+234</item>
        <item>+683</item>
        <item>+850</item>
        <item>+47</item>
        <item>+968</item>
        <item>+92</item>
        <item>+680</item>
        <item>+507</item>
        <item>+675</item>
        <item>+595</item>
        <item>+51</item>
        <item>+63</item>
        <item>+870</item>
        <item>+48</item>
        <item>+351</item>
        <item>+1</item>
        <item>+974</item>
        <item>+40</item>
        <item>+7</item>
        <item>+250</item>
        <item>+590</item>
        <item>+685</item>
        <item>+378</item>
        <item>+239</item>
        <item>+966</item>
        <item>+221</item>
        <item>+381</item>
        <item>+248</item>
        <item>+232</item>
        <item>+65</item>
        <item>+421</item>
        <item>+386</item>
        <item>+677</item>
        <item>+252</item>
        <item>+27</item>
        <item>+82</item>
        <item>+34</item>
        <item>+94</item>
        <item>+290</item>
        <item>+508</item>
        <item>+249</item>
        <item>+597</item>
        <item>+268</item>
        <item>+46</item>
        <item>+41</item>
        <item>+963</item>
        <item>+886</item>
        <item>+992</item>
        <item>+255</item>
        <item>+66</item>
        <item>+228</item>
        <item>+690</item>
        <item>+676</item>
        <item>+216</item>
        <item>+90</item>
        <item>+993</item>
        <item>+688</item>
        <item>+971</item>
        <item>+256</item>
        <item>+44</item>
        <item>+380</item>
        <item>+598</item>
        <item>+1</item>
        <item>+998</item>
        <item>+678</item>
        <item>+39</item>
        <item>+58</item>
        <item>+84</item>
        <item>+681</item>
        <item>+967</item>
        <item>+260</item>
        <item>+263</item>
    </string-array>
</resources>