<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_gravity="center">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/takephoto1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fromCamera"
            android:layout_gravity="left|bottom"
            android:background="@drawable/dialog_button"
            android:fontFamily="sans-serif-thin"
            android:typeface="monospace"
            android:text="@string/camera_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fromGallery"
            android:layout_gravity="right|bottom"
            android:background="@drawable/dialog_button"
            android:text="@string/gallery_text"
            android:fontFamily="sans-serif-thin"
            android:layout_marginLeft="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:fontFamily="sans-serif-thin"
            android:id="@+id/textView11"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="15dp"
            android:textSize="17dp" />
    </FrameLayout>

</LinearLayout>
